# WASP-AI

./: .gitignore  README.md  app.py  app2.py  pyproject.toml
matrix-page/: chat.html  script.js  style.css
openAI/: example.py  my_AI_script.py  my_script.py  openAI_integration.py  script2.py
promptapp/: app.py
static/: script.js  style.css
templates/: index.html
