[tool.poetry]
name = "promptapp"
version = "0.1.0"
description = ""
authors = ["Julia Vvedenskaya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-mail = "^0.10.0"
apscheduler = "^3.10.4"
pytz = "^2024.1"
openai = "^1.51.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
